syntax = "proto3";

service Product {
  rpc CreateProduct (ProductItem) returns (ProductItem);
  rpc ReadProduct (ProductId) returns (ProductItem);
  rpc ReadProducts (VoidParam) returns (ProductItems);
  rpc UpdateProduct(ProductItem) returns (ProductItem);
  rpc DeleteProduct (ProductId) returns (DeleteProductResponse);
}

message VoidParam {}

message ProductId {
  int32 id = 1;
}

enum  Category {
  SMARTPHONE = 0;
  CAMERA = 1;
  LAPTOPS = 2;
  HEADPHONES = 3;
  CHARGERS = 4;
  SPEAKERS = 5;
  TELEVISIONS = 6;
  MODEMS = 7;
  KEYBOARDs = 8;
  MICROPHONES = 9;
}
message ProductItem {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  Category category = 5;
}

message ProductItems {
  repeated ProductItem products = 1;
}

message DeleteProductResponse {
  bool deleted = 1;
}
